--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@remix-run/dev": "^1.1.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.15",
     "typescript": "^4.1.2"
   },
   "engines": {
