--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@microsoft/api-extractor-model": "^7.15.3",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
     "@remix-run/vercel": "^1.1.1",
     "@vercel/node": "^1.12.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "remix": "^1.1.1"
   },
   "devDependencies": {
@@ -25,7 +27,8 @@
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "vitest": "^0.1.16"
   },
   "engines": {
     "node": ">=14"
