--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@microsoft/api-extractor-model": "^7.15.3",
     "@microsoft/tsdoc": "^0.13.2",
     "@remix-run/react": "^1.1.1",
+    "@remix-run/serve": "^1.1.1",
     "@remix-run/vercel": "^1.1.1",
     "@vercel/node": "^1.12.1",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
+    "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "autoprefixer": "^10.4.2",
