--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "remix": "^1.1.1"
+    "remix": "^1.1.1",
+    "shiki": "^0.10.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
