--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "license": "",
   "scripts": {
-    "build": "remix build && ls -la node_modules/@microsoft/tsdoc/schemas/tsdoc.schema.json",
+    "build": "remix build",
     "dev": "remix dev",
     "postinstall": "remix setup node",
     "start": "remix-serve build"
@@ -12,12 +12,14 @@
   "dependencies": {
     "@microsoft/api-extractor-model": "^7.15.3",
     "@microsoft/tsdoc": "^0.13.2",
+    "@remix-run/express": "^1.1.1",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
     "@remix-run/vercel": "^1.1.1",
     "@vercel/node": "^1.12.1",
     "axios": "^0.24.0",
     "clsx": "^1.1.1",
+    "express": "^4.17.2",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "p-memoize": "4",
@@ -25,14 +27,17 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "remix": "^1.1.1",
-    "shiki": "^0.10.0"
+    "shiki": "^0.10.0",
+    "yargs": "^17.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
     "@tailwindcss/typography": "^0.5.0",
+    "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/yargs": "^17.0.8",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.15",
