--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,10 @@ jobs:
       - name: Install dependencies and build
         run: yarn
       - name: Bump version
-        run: npm version 0.0.$(git rev-list --count HEAD)-$(date +'%Y%m%d%H%M%S')
+        run: |
+          git config --global user.email "dtinth-bot@users.noreply.github.com"
+          git config --global user.name "dtinth-bot"
+          npm version 0.0.$(git rev-list --count HEAD)-$(date +'%Y%m%d%H%M%S')
       - name: Publish to npm
         uses: JS-DevTools/npm-publish@v1
         with:
