--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           git config --global user.email "dtinth-bot@users.noreply.github.com"
           git config --global user.name "dtinth-bot"
-          npm version 0.0.$(git rev-list --count HEAD)-$(date +'%Y%m%d%H%M%S')
+          npm version 0.0.$(git rev-list --count HEAD)-$(date +'%Y%m%d%H%M%S').$(git rev-parse --short HEAD)
       - name: Publish to npm
         uses: JS-DevTools/npm-publish@v1
         with:
