--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "remix": "^1.1.1",
+    "semver": "^7.3.5",
     "shiki": "^0.10.0",
     "yargs": "^17.3.1"
   },
@@ -46,6 +47,7 @@
     "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "@types/semver": "^7.3.9",
     "@types/yargs": "^17.0.8",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
