--- a/package.json
+++ b/package.json
@@ -14,19 +14,16 @@
   },
   "scripts": {
     "build": "remix build",
-    "dev": "remix dev",
-    "prepare": "remix setup node && remix build",
-    "start": "remix-serve build"
+    "dev": "remix dev"
   },
   "dependencies": {
     "@fontsource/ibm-plex-sans": "^4.5.1",
     "@fontsource/sarabun": "^4.5.0",
     "@microsoft/api-extractor-model": "^7.23.1",
     "@microsoft/tsdoc": "^0.14.1",
-    "@remix-run/express": "^1.1.1",
-    "@remix-run/react": "^1.1.1",
-    "@remix-run/serve": "^1.1.1",
-    "@remix-run/vercel": "^1.1.1",
+    "@remix-run/node": "^1.6.8",
+    "@remix-run/react": "^1.6.8",
+    "@remix-run/vercel": "^1.6.8",
     "@vercel/node": "^1.12.1",
     "axios": "^0.24.0",
     "canvaskit-wasm": "^0.32.0",
@@ -35,21 +32,22 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "p-memoize": "4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "remix": "^1.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "semver": "^7.3.5",
     "shiki": "^0.10.0",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.1",
+    "@remix-run/dev": "^1.6.8",
+    "@remix-run/eslint-config": "^1.6.8",
+    "@remix-run/serve": "^1.6.8",
     "@tailwindcss/typography": "^0.5.0",
     "@types/express": "^4.17.13",
     "@types/lodash": "^4.14.178",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
     "@types/semver": "^7.3.9",
     "@types/yargs": "^17.0.8",
     "autoprefixer": "^10.4.2",
